fixed compatibility with java 1.8